# cluster

./: CMakeLists.txt  Dockerfile  cluster  coms.go  docker-compose.yml  external.go  go.mod  heartbeat.go  internal.go  main.go  rpc.go  server.go  types.go
include/safehouse/: cluster.h
src/: cluster.cpp  main.cpp  raft.cpp  raft.h  raft.old.cpp
